--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "semver": "^5.3.0",
     "shortid": "^2.2.6",
     "strip-ansi": "^3.0.1",
-    "ws": "^2.1.0",
+    "uws": "^0.13.0",
     "yargs": "^6.6.0",
     "yyyy-mm-dd": "^1.0.1"
   },
